<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_one"
        android:title="One"
        android:icon="@drawable/icons8_world_cup_50"
        android:orderInCategory="0"
        app:showAsAction="always" />
    <item android:id="@+id/action_two"
        android:title="Two"
        android:icon="@drawable/icons8_exercise_50"
        android:orderInCategory="1"
        app:showAsAction="always" />
    <item android:id="@+id/action_three"
        android:title="Three"
        android:icon="@drawable/icons8_basketball_50"
        android:orderInCategory="2"
        app:showAsAction="always" />
    <item android:id="@+id/action_about"
        android:title="About"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>