...
    <string name="btn_msg">I\'m a Button</string>
    <string name="login_txt">Login</string>
    <string name="password_txt">Password</string>
    <string name="switch_btn_text">What does this do?</string>
    <string name="dialog_title">Finish Activity?</string>
    <string name="dialog_msg">Do you want to finish this activity and return to the previous screen?</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="start_chat_btn">Start Chat</string>
    <string name="send_button_text">Send</string>
    <string name="send_msg_text">Enter text…</string>
    <string name="test_tollbar_name">Test Toolbar</string>
    <string name="snackbar_mail_text">"Hello this means clicking me works!"</string>
    <string name="dialog_okay">Okay</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_back_title_page">Do you want to go back?</string>
    <string name="item_one_text">You selected item 1</string>
    <string name="item_three_text">You selected item 3</string>
    <string name="dialog_new_msg_title">Enter a new message</string>
    <string name="dialog_msg_placeholder">New Message</string>
    <string name="start_wearth_btn">Start Weather</string>
    <string name="min_temp_text">Min Temperature: %s°C</string>
...
