<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/dialog_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:src="@drawable/icons8_trainers_50" />

    <EditText
        android:id="@+id/dialog_edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_msg_placeholder"
        android:inputType="text"
        android:autofillHints="" />

</LinearLayout>